[project]
name = "pysatl-core"
version = "0.1.0"
description = "Core library of the PySATL project"
authors = [
    {name = "desiment",email = "desiment@yandex.ru"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (==2.0.0)",
    "scipy (>=1.15.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.16.1"
ruff = "^0.12.0"
pytest-cov = "^6.2.1"

[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true
exclude = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["A", "E", "F", "I", "PL", "RUF", "SIM", "UP", "W"]
ignore = ["PLR0913"]

[tool.mypy]
files = "pysatl_core"
mypy_path = "pysatl_core"
strict = true
